--- a/Fußball.html
+++ b/Fußball.html
@@ -15,7 +15,7 @@
     
         <h2>Fußball</h2>
         <p>Der Weg zum Profi im Fußball erfordert nicht nur Technik und Fitness, sondern auch mentale Stärke.</p>
-        <strong class="strong">Handout: Fußball</strong>
+        <strong class="strong">Fußball</strong>
         <p><strong>Ihr Weg:</strong> Professioneller Fußball in Deutschland oder international. Einstieg in Nachwuchsleistungszentren (NLZ). Chancen in Ligen wie Bundesliga, Premier League, La Liga.</p>
         <ul>
             <li><strong>Was wir bieten:</strong>
