--- a/basketball.html
+++ b/basketball.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basketball</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Basketball</h1>
+        <a href="index.html" class="link">Zurück auf die Hauptseite</a>
+    </header>
         <h2>Basketball</h2>
         <p>Haben Sie den Traum, Basketball in den USA zu spielen? Unterstützung für Highschool-, College- und Ligakarrieren. Chancen auf einen Einstieg in die NBA oder deutsche Bundesliga.</p>
         <h3>Handout: Basketball</h3>
@@ -40,5 +45,8 @@
                 </ul>
             </li>
         </ul>
+        <footer>
+            <p>&copy; 2024 Grid Iron Sports</p>
+        </footer>
 </body>
 </html>
