--- a/basketball.html
+++ b/basketball.html
@@ -13,8 +13,9 @@
     </header>
         <h2>Basketball</h2>
         <p>Haben Sie den Traum, Basketball in den USA zu spielen? Unterstützung für Highschool-, College- und Ligakarrieren. Chancen auf einen Einstieg in die NBA oder deutsche Bundesliga.</p>
-        <h3>Handout: Basketball</h3>
-        <p><strong>Ihr Traum:</strong> Basketball in den USA spielen? <br>
+        <strong class="strong"> Handout: Basketball</strong>
+        <p><strong>Ihr Traum:</strong> <br>
+            Basketball in den USA spielen? <br>
             Unterstützung für Highschool-, College- und Ligakarrieren. Chancen auf einen Einstieg in die NBA oder deutsche Bundesliga. Hilfe bei der Entwicklung Ihrer sportlichen Karriere. Netzwerk mit Coaches, Scouts und Teams. Individuelle Betreuung, abgestimmt auf Ihre Stärken.</p>
         <ul>
             <li><strong>Was wir bieten:</strong>
@@ -45,6 +46,9 @@
                 </ul>
             </li>
         </ul>
+        <br>
+        <br>
+        <br>
         <footer>
             <p>&copy; 2024 Grid Iron Sports</p>
         </footer>
