--- a/kontakt.html
+++ b/kontakt.html
@@ -14,5 +14,8 @@
     <h2>Kontakt</h2>
             <p>Telefon: +49 03514029130</p>
             <p>Email: Grid.iron.sports.original@gmail.com</p>
+            <footer>
+                <p>&copy; 2024 Grid Iron Sports</p>
+            </footer>
 </body>
 </html>
