--- a/Ameriacan-Football.html
+++ b/Ameriacan-Football.html
@@ -10,47 +10,54 @@
 <body>
     <header>
         <h1>American Football</h1>
-        <a href="index.html" class="link">Zurück zur Hauptseite</a>
+        <a href="index.html" class="link">back to the Homepage</a>
     </header>
         <h2>American Football</h2>
-        <p>Hast du schon immer mal davon geträumt, Profi zu sein und in der NFL zu spielen? Dann helfen wir dir bei deinen nächsten Schritten. Sende dein Tape von deinen Spielen und deinen besten Szenen.</p>
-        <strong class="strong"> Football </strong>
-        <p><strong>Ihr Traum:</strong> Football in den USA spielen? <br>
-            Vermittlung an Highschools, Colleges und Profi-Ligen. Einstieg in die XFL, USFL oder NFL. Aufbau einer Football-Karriere in den USA. Zugang zu Top-Teams und Coaches. Unterstützung von erfahrenen Sportexperten.</p>
+        <p>The path to becoming an NFL professional requires talent, hard work, and the right mindset. <br>
+            First, players need to master fundamental football skills such as passing, tackling, and blocking<br>
+            while improving physical fitness through endurance, strength, and speed training.<br>
+            Mentally strong players who can handle pressure and continuously strive to improve have the best chances of success.<br>
+         Dann helfen wir dir bei deinen nächsten Schritten. Sende dein Tape von deinen Spielen und deinen besten Szenen.</p>
+         <br>
+        <h2>Football </h2>
+        <p><strong>First step to The USA:</strong>
+        <br>    
+        Joining a college team is a crucial step, as many NFL players are scouted through college football. <br>
+        The NFL Draft is the moment when players are selected, but securing a permanent spot comes only after 
+        intense training and competition within the professional team.<br>
+        The journey is tough, but with dedication and constant improvement, the dream of an NFL career can become a reality. </p>
+        <br>    
         <ul>
-            <li><strong>Was wir bieten:</strong>
-                <ul>
-                    <li>Hilfe bei der Erstellung eines professionellen Tapes.</li>
-                    <li>Vermittlung an Schulen und Football-Programme.</li>
-                    <li>Kontakte zu Scouts und Football-Ligen.</li>
-                    <li>Analyse Ihrer Fähigkeiten und Optimierungsvorschläge.</li>
-                    <li>Vorbereitung auf sportliche und mentale Herausforderungen.</li>
-                </ul>
-            </li>
-            <li><strong>Ihre Vorteile:</strong>
-                <ul>
-                    <li>Zugang zu den besten Ligen der Welt.</li>
-                    <li>Karrierechancen in den USA oder international.</li>
-                    <li>Persönliche Betreuung für langfristige Ziele.</li>
-                    <li>Strategische Karriereplanung.</li>
-                    <li>Aufbau eines Netzwerks in der Football-Welt.</li>
-                </ul>
-            </li>
-            <li><strong>Wie funktioniert es?</strong>
-                <ul>
-                    <li>Sie senden uns Ihr Tape.</li>
-                    <li>Wir bewerten Ihre Leistung und geben Feedback.</li>
-                    <li>Wir suchen passende Optionen für Sie heraus.</li>
-                    <li>Kontakte zu Highschools, Colleges und Ligen werden hergestellt.</li>
-                    <li>Sie erhalten Unterstützung bei Ihrer Karriereplanung.</li>
-                </ul>
-            </li>
+            <li><strong>What We Offer:</strong></li>
+                    <li>Assistance in creating a professional highlight tape.</li> 
+                    <li>Placement in schools and football programs.</li> 
+                    <li>Connections to scouts and football leagues.</li> 
+                    <li>Analysis of your skills with optimization suggestions.</li> 
+                    <li>Preparation for athletic and mental challenges.</li> 
+         </ul>
+            <br>
+        <ul>
+            <li><strong>Your Benefits:</strong></li>
+           <li> Access to the best leagues in the world.</li> 
+            <li>Career opportunities in the U.S. or internationally.</li> 
+            <li>Personalized support for long-term goals.</li> 
+            <li>Strategic career planning. </li>
+            <li>a network within the football world.</li>
+        </ul>
+            <br>
+        <ul>
+            <li><strong>How It Works:</strong></li>
+                    <li>You send us your highlight tape.</li>
+                    <li>We evaluate your performance and provide feedback.</li>  
+                    <li> identify suitable options for you.</li>    
+                    <li>Connections to high schools, colleges, and leagues are established.</li>   
+                    <li>You receive full support in planning your career. Sie senden uns Ihr Tape.</li>
         </ul>
         <br>
         <br>
         <br>
         <footer>
-            <p>&copy; 2024 Grid Iron Sports</p>
+            <p>&copy; 2025 Grid Iron Sports</p>
         </footer>
 </body>
 </html>
