--- a/basketball.html
+++ b/basketball.html
@@ -9,48 +9,51 @@
 <body>
     <header>
         <h1>Basketball</h1>
-        <a href="index.html" class="link">Zurück auf die Hauptseite</a>
+        <a href="index.html" class="link">back to the Homepage</a>
     </header>
         <h2>Basketball</h2>
-        <p>Haben Sie den Traum, Basketball in den USA zu spielen? Unterstützung für Highschool-, College- und Ligakarrieren. Chancen auf einen Einstieg in die NBA oder deutsche Bundesliga.</p>
-        <strong class="strong"> Handout: Basketball</strong>
-        <p><strong>Ihr Traum:</strong> <br>
-            Basketball in den USA spielen? <br>
-            Unterstützung für Highschool-, College- und Ligakarrieren. Chancen auf einen Einstieg in die NBA oder deutsche Bundesliga. Hilfe bei der Entwicklung Ihrer sportlichen Karriere. Netzwerk mit Coaches, Scouts und Teams. Individuelle Betreuung, abgestimmt auf Ihre Stärken.</p>
+        <p>We start by creating a professional highlight video that showcases your best plays and skills.<br>
+        This video helps you apply to schools and teams, making you stand out from other applicants.<br>
+        Our team also supports you with the application process and helps <br>
+        you find the best opportunities that match your goals and abilities. </p>
+         <br>
+        <p><strong>Your dream:</strong> <br>
+            Do you dream of playing basketball in the USA?<br>
+             We provide the necessary support to advance your sports career, whether in high school,<br>
+             college, or a league. With our help, you can significantly increase your chances of making <br>
+             it into the NBA or the German Bundesliga. </p>
+            <br>
         <ul>
-            <li><strong>Was wir bieten:</strong>
-                <ul>
-                    <li>Erstellung eines professionellen Highlight-Videos.</li>
-                    <li>Bewerbungsunterstützung für Schulen und Vereine.</li>
-                    <li>Direkte Kontakte zu Scouts und Coaches.</li>
-                    <li>Analyse und Feedback zu Ihren sportlichen Fähigkeiten.</li>
-                    <li>Zugang zu Camps und Förderprogrammen.</li>
-                </ul>
-            </li>
-            <li><strong>Ihre Vorteile:</strong>
-                <ul>
-                    <li>Bessere Chancen auf ein Stipendium in den USA.</li>
-                    <li>Steigerung Ihres spielerischen Niveaus.</li>
-                    <li>Persönliche Betreuung von Sportexperten.</li>
-                    <li>Individuelle Karriereplanung.</li>
-                    <li>Einfache Vermittlung in Top-Ligen.</li>
-                </ul>
-            </li>
-            <li><strong>Wie funktioniert es?</strong>
-                <ul>
-                    <li>Sie senden uns Ihr Highlight-Video.</li>
-                    <li>Wir analysieren Ihr Potenzial und geben Feedback.</li>
-                    <li>Sie erhalten passende Optionen für Ihre Bewerbung.</li>
-                    <li>Wir stellen Kontakte zu Teams und Akademien her.</li>
-                    <li>Wir unterstützen Sie auf Ihrem Weg zum Profi.</li>
-                </ul>
-            </li>
+            <li><strong>What We Offer:</strong></li>
+                    <li>Assistance in creating a professional highlight tape.</li> 
+                    <li>Placement in schools and football programs.</li>     
+                    <li>Connections to scouts and football leagues.</li>  
+                    <li>Analysis of your skills with optimization suggestions.</li>
+                    <li>Preparation for athletic and mental challenges.</li>
         </ul>
+        <br>
+        <ul>
+                    <li><strong>Your Benefits:</strong></li>
+                    <li>Access to the best leagues in the world.</li> 
+                    <li>Career opportunities in the U.S. or internationally.</li> 
+                    <li>Personalized support for long-term goals. </li>
+                    <li>Strategic career planning. </li>
+                    <li>Building a network within the football world. </li>
+        </ul>
+        <br>
+        <ul>
+                <li><strong>How It Works: </strong></li>
+                    <li>You send us your highlight tape.</li> 
+                    <li>We evaluate your performance and provide feedback.</li>                         
+                    <li>We identify suitable options for you.</li>                      
+                    <li>Connections to high schools, colleges, and leagues are established.</li>                         
+                    <li>You receive full support in planning your career. </li>
+                </ul>
         <br>
         <br>
         <br>
         <footer>
-            <p>&copy; 2024 Grid Iron Sports</p>
+            <p>&copy; 2025 Grid Iron Sports</p>
         </footer>
 </body>
 </html>
