--- a/index.html
+++ b/index.html
@@ -9,23 +9,36 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen bei Grid Iron Sports</h1>
+        <h1>Welcome at Grid Iron Sports</h1>
     </header>
     <nav>
         <a href="Ameriacan-Football.html" onclick="showSection('trainers')">American Football</a>
         <a href="basketball.html" onclick="showSection('courses')">Basketball</a>
-        <a href="Fußball.html" onclick="showSection('training')">Fußball</a>
+        <a href="Fußball.html" onclick="showSection('training')">Soccer</a>
         <a href="termine.html" onclick="showSection('calendar')">Beratungstermine</a>
         <a href="kontakt.html" onclick="showSection('contact')">Impressum</a>
     </nav>
     <main>
+    <div class="shadowbox">
         <section id="home" class="active">
-            <h2 class="text">Willkommen auf unserer Seite!</h2>
-            <p class="text">Wir helfen dir dabei, deine Karriere im Sport voranzutreiben.</p>
+            <table>
+             <tr>
+                <td> 
+                    <img src="Collage Projekt.png">
+                </td> 
+                <td> 
+                    <h2>Welcome at our Homepage!</h2>
+                    <p>Are you ready to take the next step in your career?<br>
+                        then apply now free of charge on our website.</p> 
+                </td> 
+            </tr> 
+            </table>
+            <br>
         </section>
+    </div>
     </main>
     <footer>
-        <p>&copy; 2024 Grid Iron Sports</p>
+        <p>&copy; 2025 Grid Iron Sports</p>
     </footer>
 </body>
 </html>
