--- a/kontakt.html
+++ b/kontakt.html
@@ -8,10 +8,28 @@
 </head>
 <body>
     <header>
-        <h1>Kontakt</h1>
+        <h1>About us</h1>
         <a href="index.html" class="link">Zurück zur Hauptseite</a>
     </header>
-    <h2>Kontakt</h2>
+    <h2>About us</h2>
+             <p>We are 4 experts in the 3 areas we offer</p>  
+             <P>The following experts are your contact partners for these areas</p>  
+             <br>     
+             <p>Soccer:</p>  
+             <p>Jonas Knebel</p>
+             <p>Oskar Schandera</p> 
+             <br>
+             <p>Football:</p> 
+             <p>Tim Vorwerk</p>                
+             <br>    
+             <p>Basketball:</p>
+             <p>Lennart Rietzschel</p>                
+             <br>    
+             <p>Why are we doing this?</p>
+             <p>We want to take them to the next level and make sure they have a chance on the big “stage” <br>
+                to show that they belong there our experts know what it is like to get the chance and want <br>
+                to give it to others to promote the young talents</p>
+             <br>
             <p>Telefon: +49 03514029130</p>
             <p>Email: Grid.iron.sports.original@gmail.com</p>
             <footer>
