--- a/Fußball.html
+++ b/Fußball.html
@@ -9,48 +9,51 @@
 </head>
 <body>
     <header>
-        <h1>Fußball</h1>
-        <a href="index.html" class="link">Zurück zur Hauptseite</a>
+        <h1>Soccer</h1>
+        <a href="index.html" class="link">back to the Homepage</a>
     </header>
-    
-        <h2>Fußball</h2>
-        <p>Der Weg zum Profi im Fußball erfordert nicht nur Technik und Fitness, sondern auch mentale Stärke.</p>
-        <strong class="strong">Fußball</strong>
-        <p><strong>Ihr Weg:</strong> Professioneller Fußball in Deutschland oder international. Einstieg in Nachwuchsleistungszentren (NLZ). Chancen in Ligen wie Bundesliga, Premier League, La Liga.</p>
+        <h2>Soccer</h2>
+        <p>Soccer is more than just technique and fitness; it also requires mental strength.<br>
+         If you dream of becoming a professional football player, whether in Germany or internationally,<br>
+         we are here to help you. Our goal is to assist you in gaining access to youth development centers<br>
+         (YDC) and leagues like the Bundesliga, Premier League, or La Liga. </p>
+        <br>
+        <p><strong>Our work:</strong><br>
+            Our team analyzes your strengths and provides feedback, so you know exactly what to work on.<br>
+            With our help, you'll become more visible to scouts and clubs.<br>
+            We offer you access to national and international leagues and assist you in carefully planning your career. </p>
+         <br>
         <ul>
-            <li><strong>Was wir bieten:</strong>
-                <ul>
-                    <li>Vermittlung an NLZ und Vereine.</li>
-                    <li>Erstellung eines aussagekräftigen Highlight-Videos.</li>
-                    <li>Direkte Kontakte zu Talentsuchern und Scouts.</li>
-                    <li>Unterstützung bei Probetrainings und Bewerbungen.</li>
-                    <li>Analyse und Optimierung Ihrer Stärken.</li>
-                </ul>
-            </li>  
-            <li><strong>Ihre Vorteile:</strong>
-                <ul>
-                    <li>Höhere Sichtbarkeit bei Scouts und Vereinen.</li>
-                    <li>Vorbereitung auf professionelle Anforderungen.</li>
-                    <li>Zugang zu nationalen und internationalen Ligen.</li>
-                    <li>Persönliche Betreuung für Ihre Karriereplanung.</li>
-                    <li>Direkte Kontakte zu relevanten Entscheidungsträgern.</li>
-                </ul>
-            </li>
-            <li><strong>Wie funktioniert es?</strong>
-                <ul>
-                    <li>Sie senden uns Ihr Highlight-Video.</li>
-                    <li>Wir analysieren Ihre Leistung und geben Feedback.</li>
-                    <li>Sie erhalten maßgeschneiderte Vorschläge.</li>
-                    <li>Wir stellen Kontakte zu passenden Vereinen her.</li>
-                    <li>Sie werden auf Probetrainings vorbereitet.</li>
-                </ul>
-            </li>
+            <li><strong>What We Offer:</strong></li>
+                    <li> Assistance in creating a professional highlight tape.</li>      
+                    <li> in schools and football programs. </li>
+                    <li> to scouts and football leagues. </li>
+                    <li> of your skills with optimization suggestions.</li> 
+                    <li> for athletic and mental challenges.</li>
+        </ul>
+            <br>
+        <ul>     
+            <li><strong>Your Benefits:</strong></li>
+                    <li>Access to the best leagues in the world.</li>
+                    <li> Career opportunities in the U.S. or internationally. </li>
+                    <li>Personalized support for long-term goals.</li>
+                    <li>Strategic career planning.</li>
+                    <li>Building a network within the football world.</li>
+        </ul>
+            <br>
+        <ul>
+            <li><strong>How It Works:</strong></li>
+                    <li>You send us your highlight tape.</li>
+                    <li>We evaluate your performance and provide feedback.</li>                        
+                    <li>We identify suitable options for you. </li>
+                    <li>Connections to high schools, colleges, and leagues are established.</li> 
+                    <li> You receive full support in planning your career. </li>
         </ul>
         <br>
         <br>
         <br>
         <footer>
-            <p>&copy; 2024 Grid Iron Sports</p>
+            <p>&copy; 2025 Grid Iron Sports</p>
         </footer>
 </body>
 </html>
